---------------------------------------------------------------------------------------------------
Version: 0.69.53
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.52
Date: 2025-06-04
  Changes:
    - Thanks to MagistrDjo for a Russian localization!
    - Fixed even more multiplayer desyncs. Thanks Yenon.
---------------------------------------------------------------------------------------------------
Version: 0.69.51
Date: 2025-06-03
  Changes:
    - Fixed many multiplayer desyncs. Now it should be multiplayer compatible. Thanks to Yenon for your help testing and bug reporting!
---------------------------------------------------------------------------------------------------
Version: 0.69.50
Date: 2025-06-03
  Changes:
    - Armored trains/wagons: HP buffed 2x => 2.5x. 
    - Armored trains/wagons: Braking force buffed 2-10x to be commensurate with their stats... and then a little bit more just to be safe.
    - Armored locomotive fuel efficiency 25% => 20%.
---------------------------------------------------------------------------------------------------
Version: 0.69.49
Date: 2025-06-02
  Changes:
    - Added FAQ to mod page.
    - Wooden Logistics Compatibility: If Wooden logistics is installed, then long handed inserters and repair packs are now available in mixed scrap sources.
    - Alloy smelting compatibility: If alloy-smelting has coke mode on, then Rubia now gives electric kilns, and has a new coke recipe.
  Balancing:
    - Firearm mag tech cost 200 => 300
    - Yellow ammo => iron plates is now ~25% faster
    - Spidertron remnant fast inserter yield buffed: 10% 20-25 => 10% 20-40
    - Armored locomotive/wagon: Nerf weight relative to vanilla 4x => 5x.
    - Armored wagons: Buff HP relative to vanilla 1x => 2x
    - Sniper turrets now rotate their head much faster (x1.5). This makes them even better for Rubia.